--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,7 +83,7 @@
 body {
   margin: 0;
   min-height: 100vh;
-  background: var(--color-primary-glow-1), var(--color-primary-glow-2), var(--color-primary-glow-3), #050608;
+  background: var(--color-primary-glow-2), var(--color-primary-glow-3), #050608;
   color: var(--color-white);
   font-family: var(--font-iceland);
   letter-spacing: 0.02em;
